# Daniel-blog

./: Procfile  blog.db  forms.py  main.py  pyproject.toml  replit_zip_error_log.txt  requirements.txt
.upm/: store.json
templates/: footer.html  header.html  index.html  login.html  post.html  register.html
