[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
name = "root"
version = "0.0.0"
description="flask template"
[tool.poetry.dependencies]
flask = "==1.0.2"
python = "^3.8"
flask-bootstrap = "^3.3.7"
flask-ckeditor = "^0.4.4"
flask-login = "^0.5.0"
flask-sqlalchemy = "^2.4.4"
werkzeug = "^1.0.1"
flask-wtf = "^0.14.3"
sqlalchemy = "^1.3.20"
wtforms = "^2.3.3"
flask-gravatar = "^0.5.0"
